--- a/commune-staking-client/package.json
+++ b/commune-staking-client/package.json
@@ -12,12 +12,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@thirdweb-dev/react": "^4",
-    "@thirdweb-dev/sdk": "^4",
-    "ethers": "^5",
+    "@metamask/detect-provider": "^2.0.0",
+    "@metamask/sdk-react": "^0.15.0",
+    "ethers": "^5.7.2",
     "framer-motion": "^11.0.8",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "web3": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
